--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ routes/auth/auth.php
 app/Http/Controllers/client/auth/ClientAuthController.php
 app/Console/Kernel.php
 app/Http/Controllers/client/clientprofile/ProfileController.php
+.env
